--- a/home.html
+++ b/home.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payoo Mobile</title>
-</head>
-<body>
-    <h1>This is home page</h1>
-</body>
+    <!-- daisyUI cdn-->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- tailwindcss cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </head>
+  <body class="bg-[#f4f5f7] h-[100vh] max-w-[450px] mx-auto">
+    <!-- heading section  -->
+    <header class="bg-white rounded-b-2xl">
+      <nav class="flex py-3 border-b border-b-gray-100  px-6">
+        <div class="flex items-center justify-start w-1/2">
+          <img src="./assets/Group.png" alt="" class="size-12" />
+          <div>
+            <h1 class="font-extrabold text-lg">$ <span>45000</span></h1>
+            <p class="text-[#080808] opacity-50">Available Balance</p>
+          </div>
+        </div>
+        <div class="w-1/2 flex items-center justify-end">
+          <button class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg">Log Out</button>
+        </div>
+      </nav>
+      <div class="mt-8 mx-6">
+        <h2 class="text-2xl font-bold">🔥 Welcome to Payooo!</h2>
+        <p class="text-[#080808] opacity-50 mt-3 leading-6">
+          Enjoy easy and convenient financial services with us. Cashout charge is low and
+        </p>
+      </div>
+      <div class="py-6 mx-6 grid grid-cols-3 gap-4">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+            <img src="./assets//wallet1.png" alt="">
+            <h1>Add Money</h1>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
