top section done

--- a/home.html
+++ b/home.html
@@ -32,28 +32,28 @@
       </div>
       <div class="py-6 mx-6 grid grid-cols-3 gap-4">
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/wallet1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/send1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Cashout</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/money1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Transfer Money</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/bonus1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Get bonus</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/purse1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Pay Bill</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets//wallet1.png" alt="">
-            <h1>Add Money</h1>
+            <img src="./assets/transaction1.png" alt="">
+            <h1 class="mt-2 text-[#080808] opacity-50">Transactions</h1>
         </div>
       </div>
     </header>
