--- a/home.html
+++ b/home.html
@@ -8,11 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- tailwindcss cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- font awesone  cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body class="bg-[#f4f5f7] h-[100vh] max-w-[480px] mx-auto">
     <!-- heading section  -->
     <header class="bg-white rounded-b-2xl">
-      <nav class="flex py-3 border-b border-b-gray-100  px-6">
+      <nav class="flex py-3 border-b border-b-gray-100 px-6">
         <div class="flex items-center justify-start w-1/2">
           <img src="./assets/Group.png" alt="" class="size-12" />
           <div>
@@ -21,7 +29,10 @@
           </div>
         </div>
         <div class="w-1/2 flex items-center justify-end">
-          <button class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg">Log Out</button>
+          <button class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg">
+            <i class="fa-solid fa-arrow-right-from-bracket transform rotate-180"></i>
+            Log Out
+          </button>
         </div>
       </nav>
       <div class="mt-8 mx-6">
@@ -32,28 +43,28 @@
       </div>
       <div class="py-6 mx-6 grid grid-cols-3 gap-4">
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/wallet1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
+          <img src="./assets/wallet1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/send1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Cashout</h1>
+          <img src="./assets/send1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Cashout</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/money1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Transfer Money</h1>
+          <img src="./assets/money1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Transfer Money</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/bonus1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Get bonus</h1>
+          <img src="./assets/bonus1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Get bonus</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/purse1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Pay Bill</h1>
+          <img src="./assets/purse1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Pay Bill</h1>
         </div>
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
-            <img src="./assets/transaction1.png" alt="">
-            <h1 class="mt-2 text-[#080808] opacity-50">Transactions</h1>
+          <img src="./assets/transaction1.png" alt="" />
+          <h1 class="mt-2 text-[#080808] opacity-50">Transactions</h1>
         </div>
       </div>
     </header>
