--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
       <div class="mt-8 mx-6">
         <h2 class="text-2xl font-bold">🔥 Welcome to Payooo!</h2>
         <p class="text-[#080808] opacity-50 mt-3 leading-6">
-          Enjoy easy and convenient financial services with us. Cashout charge is low and
+          Enjoy easy and convenient financial services with us. <br> Cashout charge is low and
         </p>
       </div>
       <div class="py-6 mx-6 grid grid-cols-3 gap-4">
