--- a/home.html
+++ b/home.html
@@ -17,11 +17,11 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="bg-[#f4f5f7] h-[100vh] max-w-[480px] mx-auto">
+  <body class="bg-[#f4f5f7] h-[100vh] max-w-[576px] mx-auto">
     <!-- heading section  -->
     <header class="bg-white rounded-b-2xl">
       <nav class="flex py-3 border-b border-b-gray-100 px-6">
-        <div class="flex items-center justify-start w-1/2">
+        <div class="flex items-center justify-start w-1/2 gap-[2.5px]">
           <img src="./assets/Group.png" alt="" class="size-12" />
           <div>
             <h1 class="font-extrabold text-lg">$<span>45000</span></h1>
