--- a/home.html
+++ b/home.html
@@ -20,15 +20,15 @@
   <body class="bg-[#f4f5f7] h-[100vh] max-w-[576px] mx-auto">
     <!-- heading section  -->
     <header class="bg-white rounded-b-2xl">
-      <nav class="flex py-3 border-b border-b-gray-100 px-6">
-        <div class="flex items-center justify-start w-1/2 gap-[2.5px]">
+      <nav class="flex justify-between py-3 border-b border-b-gray-100 px-6">
+        <div class="flex items-center justify-start  gap-[2.5px]">
           <img src="./assets/Group.png" alt="" class="size-12" />
           <div>
             <h1 class="font-extrabold text-lg">$<span>45000</span></h1>
-            <p class="text-[#080808] opacity-50">Available Balance</p>
+            <p class="text-[#080808] opacity-50 text-sm">Available Balance</p>
           </div>
         </div>
-        <div class="w-1/2 flex items-center justify-end">
+        <div class="flex items-center justify-end">
           <button class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg">
             <i class="fa-solid fa-arrow-right-from-bracket transform rotate-180"></i>
             Log Out
@@ -38,10 +38,10 @@
       <div class="mt-8 mx-6">
         <h2 class="text-2xl font-bold">🔥 Welcome to Payooo!</h2>
         <p class="text-[#080808] opacity-50 mt-3 leading-6">
-          Enjoy easy and convenient financial services with us. <br> Cashout charge is low and
+          Enjoy easy and convenient financial services with us. Cashout charge is low and
         </p>
       </div>
-      <div class="py-6 mx-6 grid grid-cols-3 gap-4">
+      <div class="py-6 mx-6 grid grid-cols-2 sm:grid-cols-3 gap-4">
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
           <img src="./assets/wallet1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
