--- a/home.html
+++ b/home.html
@@ -17,19 +17,19 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="bg-[#f4f5f7] h-[100vh] max-w-[576px] mx-auto">
+  <body class="bg-[#f4f5f7] max-w-[576px] mx-auto">
     <!-- heading section  -->
     <header class="bg-white rounded-b-2xl">
       <nav class="flex justify-between py-3 border-b border-b-gray-100 px-6">
-        <div class="flex items-center justify-start  gap-[2.5px]">
+        <div class="flex items-center justify-start gap-[2.5px]">
           <img src="./assets/Group.png" alt="" class="size-12" />
           <div>
-            <h1 class="font-extrabold text-lg">$<span>45000</span></h1>
+            <h1 class="font-extrabold text-lg">$<span id="current-amount">45000</span></h1>
             <p class="text-[#080808] opacity-50 text-sm">Available Balance</p>
           </div>
         </div>
         <div class="flex items-center justify-end">
-          <button class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg">
+          <button id="log-out" class="btn bg-[#f4f5f7] text-[#080808] opacity-50 shadow rounded-lg hover:bg-blue-100">
             <i class="fa-solid fa-arrow-right-from-bracket transform rotate-180"></i>
             Log Out
           </button>
@@ -42,31 +42,87 @@
         </p>
       </div>
       <div class="py-6 mx-6 grid grid-cols-2 sm:grid-cols-3 gap-4">
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/wallet1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/send1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Cashout</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/money1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Transfer Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/bonus1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Get bonus</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/purse1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Pay Bill</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
           <img src="./assets/transaction1.png" alt="" />
           <h1 class="mt-2 text-[#080808] opacity-50">Transactions</h1>
         </div>
       </div>
     </header>
+    <section id="add-money" class="mt-8 mx-6 pb-16">
+      <h1 class="font-bold">Add Money</h1>
+      <br />
+      <form class="bg-white p-8 rounded-3xl w-full">
+        <div>
+          <label for="banks" class="font-semibold opacity-75">Select a Bank</label>
+          <br />
+          <select
+            name="bank"
+            id="bank"
+            required
+            class="select w-full bg-[#f4f5f7] text-[#080808] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+          >
+            <option disabled selected>Select Bank</option>
+            <option value="AB Bank">AB Bank</option>
+            <option value="Premier Bank">Premier Bank</option>
+            <option value="Islami Bank">Islami Bank</option>
+          </select>
+        </div>
+        <div class="mt-5 w-full">
+          <label for="account-number" class="font-semibold opacity-75">Bank Account Number</label>
+          <br />
+          <input
+            id="account-number"
+            type="text"
+            required
+            placeholder="Enter 11 digit account number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="add-amount" class="font-semibold opacity-75">Amount to Add</label>
+          <br />
+          <input
+            id="add-amount"
+            type="text"
+            required
+            placeholder="Add Amount to withdraw"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="pin-number" class="font-semibold opacity-75">Pin Number</label>
+          <br />
+          <input
+            id="pin-number"
+            type="text"
+            required
+            placeholder="Enter 4 digit pin number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+          />
+        </div>
+        <button type="submit" id="add-money-btn" class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700">Add Money</button>
+      </form>
+    </section>
+    <script src="./script.js"></script>
   </body>
 </html>
