--- a/home.html
+++ b/home.html
@@ -41,37 +41,37 @@
           Enjoy easy and convenient financial services with us. Cashout charge is low and
         </p>
       </div>
-      <div class="py-6 mx-6 grid grid-cols-2 sm:grid-cols-3 gap-4">
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+      <div class="py-6 mx-6 grid grid-cols-3 gap-4">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/wallet1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Add Money</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Add Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/send1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Cashout</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Cashout</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/money1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Transfer Money</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Transfer Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/bonus1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Get bonus</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Get bonus</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/purse1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Pay Bill</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Pay Bill</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-2.5 py-5 hover:bg-purple-50">
+        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/transaction1.png" alt="" />
-          <h1 class="mt-2 text-[#080808] opacity-50">Transactions</h1>
+          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Transactions</h1>
         </div>
       </div>
     </header>
     <section id="add-money" class="mt-8 mx-6 pb-16">
       <h1 class="font-bold">Add Money</h1>
       <br />
-      <form class="bg-white p-8 rounded-3xl w-full">
+      <form id="add-money-form" class="bg-white p-8 rounded-3xl w-full">
         <div>
           <label for="banks" class="font-semibold opacity-75">Select a Bank</label>
           <br />
