--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
           Enjoy easy and convenient financial services with us. Cashout charge is low and
         </p>
       </div>
-      <div class="py-6 mx-6 grid grid-cols-3 gap-4">
+      <div class="py-6 mx-6 grid grid-cols-3 gap-2.5 sm:gap-4">
         <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/wallet1.png" alt="" />
           <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Add Money</h1>
@@ -79,7 +79,7 @@
             name="bank"
             id="bank"
             required
-            class="select w-full bg-[#f4f5f7] text-[#080808] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+            class="select w-full bg-[#f4f5f7] text-[#080808] rounded-3xl mt-3 border-none hover:bg-purple-50"
           >
             <option disabled selected>Select Bank</option>
             <option value="AB Bank">AB Bank</option>
@@ -95,7 +95,7 @@
             type="text"
             required
             placeholder="Enter 11 digit account number"
-            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
           />
         </div>
         <div class="mt-5 w-full">
@@ -106,7 +106,7 @@
             type="text"
             required
             placeholder="Add Amount to withdraw"
-            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
           />
         </div>
         <div class="mt-5 w-full">
@@ -117,7 +117,7 @@
             type="text"
             required
             placeholder="Enter 4 digit pin number"
-            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50 focus:bg-purple-50"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
           />
         </div>
         <button type="submit" id="add-money-btn" class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700">Add Money</button>
