--- a/home.html
+++ b/home.html
@@ -42,37 +42,37 @@
         </p>
       </div>
       <div class="py-6 mx-6 grid grid-cols-3 gap-2.5 sm:gap-4">
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/wallet1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Add Money</h1>
+        <div id="addMoney-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/wallet1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Add Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/send1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Cashout</h1>
+        <div id="cashout-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/send1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Cashout</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/money1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Transfer Money</h1>
+        <div id="transfer-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/money1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Transfer Money</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/bonus1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Get bonus</h1>
+        <div id="bonus-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/bonus1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Get bonus</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/purse1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Pay Bill</h1>
+        <div id="payBill-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/purse1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Pay Bill</h1>
         </div>
-        <div class="flex flex-col justify-center items-center rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
-          <img src="./assets/transaction1.png" alt="" />
-          <h1 class="mt-2 text-sm sm:text-base text-[#080808] opacity-50">Transactions</h1>
+        <div id="transaction-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+          <img src="./assets/transaction1.png" alt="" class="mx-auto" />
+          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Transactions</h1>
         </div>
       </div>
     </header>
-    <section id="add-money" class="mt-8 mx-6 pb-16">
+    <section id="add-money-section" class="mt-8 mx-6 pb-16 hidden">
       <h1 class="font-bold">Add Money</h1>
       <br />
       <form id="add-money-form" class="bg-white p-8 rounded-3xl w-full">
-        <div>
+        <div class="w-full">
           <label for="banks" class="font-semibold opacity-75">Select a Bank</label>
           <br />
           <select
@@ -83,7 +83,7 @@
           >
             <option disabled selected>Select Bank</option>
             <option value="AB Bank">AB Bank</option>
-            <option value="Premier Bank">Premier Bank</option>
+            <option value="Agrani Bank">Agrani Bank</option>
             <option value="Islami Bank">Islami Bank</option>
           </select>
         </div>
@@ -120,8 +120,246 @@
             class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
           />
         </div>
-        <button type="submit" id="add-money-btn" class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700">Add Money</button>
+        <button
+          type="submit"
+          id="add-money-btn"
+          class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700"
+        >
+          Add Money
+        </button>
       </form>
+    </section>
+    <section id="cash-out-section" class="mt-8 mx-6 pb-16 hidden">
+      <h1 class="font-bold">Cash Out</h1>
+      <br />
+      <form id="cash-out-form" class="bg-white p-8 rounded-3xl w-full">
+        <div class="w-full">
+          <label for="agent-number" class="font-semibold opacity-75">Agent Number</label>
+          <br />
+          <input
+            id="agent-number"
+            type="text"
+            required
+            placeholder="Enter 11 digit account number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="out-amount" class="font-semibold opacity-75">Amount</label>
+          <br />
+          <input
+            id="out-amount"
+            type="text"
+            required
+            placeholder="Enter amount to withdraw"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="pin" class="font-semibold opacity-75">Pin Number</label>
+          <br />
+          <input
+            id="pin"
+            type="text"
+            required
+            placeholder="Enter 4 digit pin number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <button
+          type="submit"
+          id="withdraw-money-btn"
+          class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700"
+        >
+          Withdraw Money
+        </button>
+      </form>
+    </section>
+    <section id="transfer-money-section" class="mt-8 mx-6 pb-16 hidden">
+      <h1 class="font-bold">Transfer Money</h1>
+      <br />
+      <form id="transfer-form" class="bg-white p-8 rounded-3xl w-full">
+        <div class="w-full">
+          <label for="user-number" class="font-semibold opacity-75">User Account Number</label>
+          <br />
+          <input
+            id="user-number"
+            type="text"
+            required
+            placeholder="Enter 11 digit number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="transfer-amount" class="font-semibold opacity-75">Amount</label>
+          <br />
+          <input
+            id="tranfer-amount"
+            type="text"
+            required
+            placeholder="Enter amount to transfer"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="pin-number" class="font-semibold opacity-75">Pin Number</label>
+          <br />
+          <input
+            id="pin-number"
+            type="text"
+            required
+            placeholder="Enter 4 digit pin number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <button
+          type="submit"
+          id="transfer-money-btn"
+          class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700"
+        >
+          Send Now
+        </button>
+      </form>
+    </section>
+    <section id="bonus-section" class="mt-8 mx-6 pb-16 hidden">
+      <h1 class="font-bold">Get Bonus</h1>
+      <br />
+      <form id="bonus-form" class="bg-white p-8 rounded-3xl w-full">
+        <div class="w-full">
+          <label for="bonus" class="font-semibold opacity-75">User Bonus Coupon</label>
+          <br />
+          <input
+            id="bonus"
+            type="text"
+            required
+            placeholder="Enter your coupon"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <button
+          type="submit"
+          id="bonus-btn"
+          class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700"
+        >
+          Get Bonus
+        </button>
+      </form>
+    </section>
+    <section id="pay-bill-section" class="mt-8 mx-6 pb-16 hidden">
+      <h1 class="font-bold">Pay Bill</h1>
+      <br />
+      <form id="pay-bill-form" class="bg-white p-8 rounded-3xl w-full">
+        <div class="w-full">
+          <label for="payable-option" class="font-semibold opacity-75">Select To Pay</label>
+          <br />
+          <select
+            name="payable-option"
+            id="payable-option"
+            required
+            class="select w-full bg-[#f4f5f7] text-[#080808] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          >
+            <option disabled selected>Select back</option>
+            <option value="Electricity Bill">Electricity Bill</option>
+            <option value="Wifi Bill">Wifi Bill</option>
+            <option value="Water Bill">Water Bill</option>
+          </select>
+        </div>
+        <div class="mt-5 w-full">
+          <label for="biller-account-number" class="font-semibold opacity-75">Biller Account Number</label>
+          <br />
+          <input
+            id="biller-account-number"
+            type="text"
+            required
+            placeholder="Enter account number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="pay-amount" class="font-semibold opacity-75">Amount to Pay</label>
+          <br />
+          <input
+            id="pay-amount"
+            type="text"
+            required
+            placeholder="Add Amount to pay"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <div class="mt-5 w-full">
+          <label for="pin-number" class="font-semibold opacity-75">Pin Number</label>
+          <br />
+          <input
+            id="pin-number"
+            type="text"
+            required
+            placeholder="Enter 4 digit pin number"
+            class="input w-full bg-[#f4f5f7] rounded-3xl mt-3 border-none hover:bg-purple-50"
+          />
+        </div>
+        <button
+          type="submit"
+          id="pay-btn"
+          class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5 hover:bg-blue-700"
+        >
+          Pay Now
+        </button>
+      </form>
+    </section>
+    <section id="transaction-section" class="mt-8 mx-6 pb-16">
+      <div class="flex justify-between items-center">
+        <h1 class="font-bold">Transaction History</h1>
+        <p class="text-xs text-[#080808] opacity-75">View All</p>
+      </div>
+      <br />
+      <div class="bg-white w-full px-6.5 py-5 rounded-lg flex justify-between items-center">
+        <div class="flex justify-start items-center gap-2">
+          <div class="bg-[#f4f5f7] rounded-[50%] p-2">
+            <img src="./assets/wallet1.png" alt="" />
+          </div>
+          <div>
+            <h1 class="text-sm font-bold opacity-80">Electricity Bill</h1>
+            <p class="text-xs text-[#080808] opacity-75 mt-1">Today 01:44 AM</p>
+          </div>
+        </div>
+        <i class="fa-solid fa-ellipsis-vertical opacity-65 text-xl"></i>
+      </div>
+      <div class="bg-white w-full mt-3.5 px-6.5 py-5 rounded-lg flex justify-between items-center">
+        <div class="flex justify-start items-center gap-2">
+          <div class="bg-[#f4f5f7] rounded-[50%] p-2">
+            <img src="./assets/wallet1.png" alt="" />
+          </div>
+          <div>
+            <h1 class="text-sm font-bold opacity-80">Bank Deposit</h1>
+            <p class="text-xs text-[#080808] opacity-75 mt-1">Today 01:44 AM</p>
+          </div>
+        </div>
+        <i class="fa-solid fa-ellipsis-vertical opacity-65 text-xl"></i>
+      </div>
+      <div class="bg-white w-full mt-3.5 px-6.5 py-5 rounded-lg flex justify-between items-center">
+        <div class="flex justify-start items-center gap-2">
+          <div class="bg-[#f4f5f7] rounded-[50%] p-2">
+            <img src="./assets/wallet1.png" alt="" />
+          </div>
+          <div>
+            <h1 class="text-sm font-bold opacity-80">Mobile Recharge</h1>
+            <p class="text-xs text-[#080808] opacity-75 mt-1">Today 01:44 AM</p>
+          </div>
+        </div>
+        <i class="fa-solid fa-ellipsis-vertical opacity-65 text-xl"></i>
+      </div>
+      <div class="bg-white w-full mt-3.5 px-6.5 py-5 rounded-lg flex justify-between items-center">
+        <div class="flex justify-start items-center gap-2">
+          <div class="bg-[#f4f5f7] rounded-[50%] p-2">
+            <img src="./assets/wallet1.png" alt="" />
+          </div>
+          <div>
+            <h1 class="text-sm font-bold opacity-80">Gas Bill</h1>
+            <p class="text-xs text-[#080808] opacity-75 mt-1">Today 01:44 AM</p>
+          </div>
+        </div>
+        <i class="fa-solid fa-ellipsis-vertical opacity-65 text-xl"></i>
+      </div>
     </section>
     <script src="./script.js"></script>
   </body>
