--- a/home.html
+++ b/home.html
@@ -42,29 +42,29 @@
         </p>
       </div>
       <div class="py-6 mx-6 grid grid-cols-3 gap-2.5 sm:gap-4">
-        <div id="addMoney-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="addMoney-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/wallet1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Add Money</h1>
+          <h1 class="mt-2 text-center text-[12px] sm:text-base text-[#080808] opacity-80">Add Money</h1>
         </div>
-        <div id="cashout-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="cashout-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/send1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Cashout</h1>
+          <h1 class="mt-2 text-center text-[12px] sm:text-base text-[#080808] opacity-70">Cashout</h1>
         </div>
-        <div id="transfer-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="transfer-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/money1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Transfer Money</h1>
+          <h1 class="mt-2 text-center text-[12px] sm:text-base text-[#080808] opacity-70">Transfer Money</h1>
         </div>
-        <div id="bonus-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="bonus-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/bonus1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Get bonus</h1>
+          <h1 class="mt-3 text-center text-[12px] sm:text-base text-[#080808] opacity-70">Get Bonus</h1>
         </div>
-        <div id="payBill-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="payBill-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/purse1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Pay Bill</h1>
+          <h1 class="mt-2 text-center text-[12px] sm:text-base text-[#080808] opacity-70">Pay Bill</h1>
         </div>
-        <div id="transaction-card-btn" class="rounded-lg shadow px-1.5 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
+        <div id="transaction-card-btn" class="rounded-lg shadow px-1 py-3.5 sm:px-2.5 sm:py-5 hover:bg-purple-50">
           <img src="./assets/transaction1.png" alt="" class="mx-auto" />
-          <h1 class="mt-2 text-center text-sm sm:text-base text-[#080808] opacity-70">Transactions</h1>
+          <h1 class="mt-2 text-center text-[12px] sm:text-base text-[#080808] opacity-70">Transactions</h1>
         </div>
       </div>
     </header>
