--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div>
         <label for="number" class="font-bold">Mobile Number</label>
         <br/>
-        <input id="mobile-number" type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] rounded-3xl mt-3" />
+        <input id="mobile-number" type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] rounded-3xl mt-3 border-none" />
       </div>
       <div class="mt-5">
         <label for="number" class="font-bold">4 Digit Pin</label>
         <br/>
-        <input id="pin-number" type="text" placeholder="Enter 4 digit pin" class="input bg-[#f4f5f7] rounded-3xl mt-3" />
+        <input id="pin-number" type="text" placeholder="Enter 4 digit pin" class="input bg-[#f4f5f7] rounded-3xl mt-3 border-none" />
       </div>
       <button id="login" class="btn bg-[#0874F2] text-white w-full rounded-3xl mt-5">Login</button>
     </form>
